--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
   <div class="responsive-content">
     <a href="#" target="_blank">Paper</a>
     <span class="sep"></span>
+    <a href="https://github.com/idvxlab/fact4vec" target="_blank">Model</a>
+    <span class="sep"></span>
     <a href="https://dataerato.github.io" target="_blank">System</a>
     <span class="sep"></span>
     <a href="#" target="_blank">Video</a>
