docs: update index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="responsive-content">
     <a href="#" target="_blank">Paper</a>
     <span class="sep"></span>
-    <a href="https://github.com/idvxlab/fact4vec" target="_blank">Model</a>
+    <a href="https://github.com/idvxlab/fact4vec" target="_blank">Github</a>
     <span class="sep"></span>
     <a href="https://dataerato.github.io" target="_blank">System</a>
     <span class="sep"></span>
