--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
   <div class="responsive-content">
     <a href="#" target="_blank">Paper</a>
     <span class="sep"></span>
-    <a href="https://github.com/idvxlab/fact4vec" target="_blank">Github</a>
+    <a href="https://github.com/idvxlab/fact2vec" target="_blank">Github</a>
     <span class="sep"></span>
-    <a href="https://dataerato.github.io" target="_blank">System</a>
+    <a href="https://erato.idvxlab.com/" target="_blank">System</a>
     <span class="sep"></span>
     <a href="#" target="_blank">Video</a>
     <span class="sep"></span>
