docs(index.html): add paper link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
  <section>
   <h2>🔸Resources🔸</h2>
   <div class="responsive-content">
-    <a href="#" target="_blank">Paper</a>
+    <a href="https://arxiv.org/pdf/2209.02529.pdf" target="_blank">Paper</a>
     <span class="sep"></span>
     <a href="https://github.com/idvxlab/fact2vec" target="_blank">Github</a>
     <span class="sep"></span>
