update paper info

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
     <span class="sep"></span>
     <a href="https://erato.idvxlab.com/" target="_blank">System</a>
     <span class="sep"></span>
-    <a href="#" target="_blank">Video</a>
+    <a href="https://www.youtube.com/watch?v=o-s25jMn43A" target="_blank">Video</a>
     <span class="sep"></span>
-    <a href="#" target="_blank">Presentation</a>
+    <a href="https://www.youtube.com/watch?v=jfMVu4yDNU4" target="_blank">Presentation</a>
   </div>
 </section>
 <section>
@@ -80,20 +80,20 @@
 <section>
     <h2>🔸Reference🔸</h2>
 
-  <div class="citation-container">
-    <div class="citation">Mengdi Sun, Ligan Cai, Weiwei Cui, Yanqiu Wu, Yang Shi, and Nan Cao. Erato: Cooperative Data Story Editing via Fact Interpolation. IEEE Trans. Visualization & Comp. Graphics, 2022</div>
-    <span class="citation-title">Plain Text</span>
-  </div>
-
   <!-- <div class="citation-container">
-    <div class="citation">@article{shi2020calliope,
-      title={Calliope: Automatic Visual Data Story Generation from a Spreadsheet},
-      author={Shi, Danqing and Xu, Xinyue and Sun, Fuling and Shi, Yang and Cao, Nan},
-      journal = {IEEE Transactions on Visualization and Computer Graphics},
-      year = {2020},
+    <div class="citation">M. Sun, L. Cai, W. Cui, Y. Wu, Y. Shi and N. Cao, "Erato: Cooperative Data Story Editing via Fact Interpolation," in IEEE Transactions on Visualization and Computer Graphics, 2022, doi: 10.1109/TVCG.2022.3209428.</div>
+    <span class="citation-title">Plain Text</span>
+  </div> -->
+
+  <div class="citation-container">
+    <div class="citation">@article{sun2022erato,
+      title={Erato: Cooperative Data Story Editing via Fact Interpolation},
+      author={Sun, Mengdi and Cai, Ligan and Cui, Weiwei and Wu, Yanqiu and Shi, Yang and Cao, Nan},
+      journal={IEEE Transactions on Visualization and Computer Graphics},
+      year={2022},
       publisher={IEEE}
-    }</div> -->
-    <!-- <span class="citation-title">BibteX</span> -->
+    }</div> 
+    <span class="citation-title">BibteX</span> 
   </div>
   
   <footer>
